# OpenGL-Project

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  GP Documentation.docx  Lab9VS.vcxproj  Lab9VS.vcxproj.filters  Mesh.hpp  ProjectGP.sln  labGP9.vcxproj  labGP9.vcxproj.filters  main.cpp
shaders/: lightCube.frag  shaderStart.frag  shaderStart.vert
skyBox/: leftSkyBox.tga  rapture_bk.tga  rapture_dn.tga  rapture_ft.tga  rapture_rt.tga
x64/Debug/: Lab9VS.exe.recipe  Lab9VS.vcxproj.FileListAbsolute.txt  ProjectGP.exe.recipe  labGP9.exe.recipe  vc143.idb
x64/Debug/Lab9VS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab9VS.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/ProjectGP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/labGP9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  labGP9.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: Lab9VS.vcxproj.FileListAbsolute.txt  ProjectGP.exe.recipe  ProjectGP.iobj  ProjectGP.ipdb
x64/Release/ProjectGP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ProjectGP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
x64/Release/objects/glass/: Cup_Made_By_Tyro_Smith.blend1  (+5 more)
x64/Release/shaders/: lightSpaceTrMatrix.vert  screenQuad.frag  shaderStart.frag
x64/Release/skyBox/: backSkyBox.tga  frontSkyBox.tga  rapture_lf.tga  rightSkyBox.tga
(+18 files in other folders)
